<resources>
    <string name="app_name">MOBSHOP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">
        El trabajo siempre tiene sus recompensas. El secreto es querer mejorar tu vida
    </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="str_name">Nombre</string>
    <string name="str_lastname">Apellidos</string>
    <string name="str_num_member">Número de socio</string>
    <string name="str_my_member">Folio de mi vendedor</string>
    <string name="str_phone_number">Número de teléfono</string>
    <string name="str_email">Correo</string>
    <string name="str_password">Contraseña</string>
    <string name="str_confirm_password">Confirmar Contraseña</string>
    <string name="str_new_password">Nueva Contraseña</string>
    <string name="str_all">Todo</string>

    <string name="str_product_id">ID</string>
    <string name="str_product_name">Nombre del producto</string>
    <string name="str_product_catalog">Catalogo</string>
    <string name="str_product_material">Material</string>
    <string name="str_product_cost">Precio</string>
    <string name="str_product_description">Descripción</string>
    <string name="str_product_status">¿Disponible?</string>
    <string name="str_product_status_available">Si</string>
    <string name="str_product_status_not_available">No</string>


    <string name="str_clean">Limpiar campos</string>
    <string name="str_save">Guardar</string>
    <string name="str_update">Actualizar</string>
    <string name="str_delete">Eliminar</string>
    <string name="str_signUp">Acceder</string>
    <string name="str_register">Registrarme</string>
    <string name="str_create_account">Crear una cuenta</string>

    <string name="str_socio">Como vendedor</string>
    <string name="str_client">Como cliente</string>

    <string name="menu_member_profile">Perfil</string>
    <string name="menu_member_add">Agregar Producto</string>
    <string name="menu_member_search">Buscar Producto</string>
    <string name="menu_member_available">Productos disponibles</string>
    <string name="menu_member_not_available">Productos agotados</string>
    <string name="about">Acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_client">MainClientActivity</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="menu_client_home">Productos</string>
    <string name="menu_client_wishList">Lista de deseos</string>
    <string name="menu_client_contact">Información del vendedor</string>
</resources>