<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_member_profile" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_member_add" />
        <item
        android:id="@+id/nav_search_product"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/menu_member_search" />
        <item
            android:id="@+id/nav_available_product"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_member_available" />
        <item
            android:id="@+id/nav_not_available_product"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_member_not_available" />
    </group>
</menu>