<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main_member">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mis datos"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="30dp"/>
        <ImageView
            android:id="@+id/member_frag_main_imgView_photoProduct"
            android:layout_width="175dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:contentDescription="@string/str_all"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/icon_splash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/member_txtInputMain_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_name"
                android:layout_margin="10dp"
                android:textSize="23dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/member_txtInputMain_numer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_num_member"
                android:layout_margin="10dp"
                android:textSize="23dp"
                />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_txtInputMain_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="23dp"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/member_txtInputMain_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_email"
                android:layout_margin="10dp"
                android:textSize="23dp"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_txtInputMain_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="23dp"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/member_txtInputMain_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="23dp"
                android:layout_margin="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/member_frag_main_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/str_save"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>