<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.add.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/member_frag_add_imgView_photoProduct"
                android:layout_width="175dp"
                android:layout_height="171dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/str_all"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/icon_splash" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/member_frag_add_imgBtn_camera"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add_photo" />

                <ImageButton
                    android:id="@+id/member_frag_add_imgBtn_gallery"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_add_image" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_product_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/member_frag_add_txtEdit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/member_frag_add_spn_category"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:spinnerMode="dropdown" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/member_frag_add_txtEdit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_product_cost">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/member_frag_add_txtEdit_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_product_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/member_frag_add_txtEdit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:freezesText="false"
                    android:gravity="center"
                    android:text="@string/str_product_status"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/member_frag_add_switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:scaleX="1.5"
                    android:scaleY="1.2"
                    android:showText="true"
                    android:splitTrack="false"
                    android:textOff="@string/str_product_status_not_available"
                    android:textOn="@string/str_product_status_available" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/member_frag_add_btn_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/str_clean"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/member_frag_add_btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/str_save"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>